--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -8,7 +8,6 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
@@ -44,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.3",
+    "msw": "^0.36.8"
   }
 }
