--- a/project/frontend/package.json
+++ b/project/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.3",
